added Flakes: time-ordered, monotonic, UID